--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
     <title>WebTemplate</title>
 </head>
 <body>
-    <!-- <div class="wrapper"> -->
+  <!-- Home -->
     <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand text-white" href="#">
         <img src="images/logo-yellow.png">
     </a>
@@ -58,9 +57,6 @@
     </div>
   </div>
 </nav>
-
-<header">
-  <!-- HOME -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -78,12 +74,10 @@
             </h4>
             <div class="content-buttons">
 
-            <button type="button" class="btn btn-light effect mr-2 ml-2 ">CONTACT US</button>
-            <button type="button" class="btn btn-theme effect mr-5">LEARN MORE</button>
+            <button type="button" class="btn btn-light  mr-2 ml-2 ">CONTACT US</button>
+            <button type="button" class="btn btn-theme  mr-5">LEARN MORE</button>
           </div>
-
             </div>
-
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
@@ -95,11 +89,9 @@
               Expect warmly its tended garden him esteem had remove off. Effects dearest staying now sixteen nor improve.
             </h4>
             <div class="content-buttons">
-
             <button type="button" class="btn btn-light effect mr-2 ml-2 ">CONTACT US</button>
             <button type="button" class="btn btn-theme effect mr-5">LEARN MORE</button>
           </div>
-
             </div>
         </div>
       </div>
@@ -112,33 +104,22 @@
               Expect warmly its tended garden him esteem had remove off. Effects dearest staying now sixteen nor improve.
             </h4>
             <div class="content-buttons">
-
             <button type="button" class="btn btn-light effect mr-2 ml-2 ">CONTACT US</button>
             <button type="button" class="btn btn-theme effect mr-5">LEARN MORE</button>
           </div>
-
             </div>
         </div>
       </div>
     </div> 
-    <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a> -->
   </div>
 <!-- </div> -->
-</header>
 <!-- ABOUT -->
-<div class="container">
+<div class="container-fluid">
 <div class="row">
-  <div class="col md-5 video-about ">
+  <div class="col-md-5 about-video">
     <img src="http://thememine.net/themeforest/vinno/assets/img/about/8.jpg" alt="">
   </div>
-  <div class="col md-7 video-description">
+  <div class="col-md-7 about-video-description">
     <h2>
       Welcome to our
       <br/>
@@ -146,7 +127,7 @@ construction company
     </h2>
     <p>
       Both rest of know draw fond post as. It agreement defective to excellent. Feebly do engage of narrow. Extensive repulsive belonging depending if promotion be zealously as. Preference inquietude ask now are dispatched led appearance. 
-      Small meant in so doubt hopes.
+      md-4all meant in so doubt hopes.
     </p>
     <p>
       In no impression assistance contrasted. Manners she wishing justice hastily new anxious. At discovery discourse departure
@@ -160,7 +141,7 @@ construction company
       <li>
         <i class="fa fa-check" aria-hidden="true"> 
         </i>
-        Attacks Smiling And May Out Assured Moments
+        Attacks md-4iling And May Out Assured Moments
       </li>
       <li>
         <i class="fa fa-check" aria-hidden="true"> 
@@ -176,24 +157,24 @@ construction company
     </ul>
     <div class="button-info alighn-left">
       <div class="row">
-        <div class="col md-4">
-          <div class="item">
+        <div class="col-md-3">
+          <div class="about-item text-center">
             <h4>
               8+ Year
               <span>EXPERIANCE</span>
             </h4>
           </div>
         </div>
-        <div class="col md-4">
-          <div class="item">
+        <div class="col-md-3 ">
+          <div class="about-item text-center">
             <h4>
               1200+Active
               <span>CLIENTS</span>
             </h4>
           </div>
         </div>
-        <div class="col md-4">
-          <div class="item">
+        <div class="col-md-3">
+          <div class="about-item text-center">
             <h4>
               250+ Expert
               <span>WORKER</span>
@@ -205,17 +186,17 @@ construction company
   </div>
 </div>
 </div>
-<div class="Container">
+<div class="container-fluid">
   <div class="row ">
-<div class="col about-img">
+<div class="col-md-6 about-img">
   <img src="http://thememine.net/themeforest/vinno/assets/img/banner/10.jpg" alt="">
 </div>
-<div class="col about-description">
+<div class="col-md-6 about-description">
   <h2>
     Pride of the Business For Over a Hundred Years
   </h2>
   <p>
-    Neglected agreeable of discovery concluded oh it sportsman. 
+    Neglected agreeable of discovery concluded oh it sportmd-4an. 
     Week to time in john. Son elegance use weddings separate. Ask too matter formed county wicket oppose talent. He immediate sometimes or to dependent in. Everything few frequently discretion surrounded did simplicity decisively.
      Less he year do with no sure loud
   </p>
@@ -267,9 +248,9 @@ construction company
   </div>
   </div>
   <!-- Services -->
-  <div class="Container site">
+  <div class="container-fluid section-services">
     <div class="row">
-      <div class="col md-8 site-heading">
+      <div class="col-md-8 section-heading">
         <h4>___OUR SERVICES</h4>
         <h2>
           WHAT WE OFFER
@@ -283,7 +264,7 @@ construction company
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3 sm-6 services-work">
+      <div class="col-md-3 col-xs-6 services-work">
         <div class="service-item">
           <div class="icon">
             <i class="fa fa-home" aria-hidden="true"></i>
@@ -303,7 +284,7 @@ construction company
           <div class="count">1</div>
         </div>
       </div>
-      <div class="col-md-3 sm-6 services-work">
+      <div class="col-md-3 col-xs-6 services-work">
         <div class="service-item">
           <div class="icon">
             <i class="fa fa-fire" aria-hidden="true"></i>
@@ -323,7 +304,7 @@ construction company
           <div class="count">2</div>
         </div>
       </div>
-      <div class="col-md-3 sm-6 services-work">
+      <div class="col-md-3 col-xs-6 services-work">
         <div class="service-item">
           <div class="icon">
             <i class="fa fa-id-badge" aria-hidden="true"></i>
@@ -343,7 +324,7 @@ construction company
           <div class="count">3</div>
         </div>
       </div>
-      <div class="col-md-3 sm-6 services-work">
+      <div class="col-md-3 col-xs-6 services-work">
         <div class="service-item">
           <div class="icon">
             <i class="fa fa-building" aria-hidden="true"></i>
@@ -363,7 +344,7 @@ construction company
           <div class="count">4</div>
         </div>
       </div>
-      <div class="col-md-3 sm-6 services-work">
+      <div class="col-md-3 col-xs-6 services-work">
         <div class="service-item">
           <div class="icon">
             <i class="fa fa-paint-brush" aria-hidden="true"></i>
@@ -383,7 +364,7 @@ construction company
           <div class="count">5</div>
         </div>
       </div>
-      <div class="col-md-3 sm-6 services-work">
+      <div class="col-md-3 col-xs-6 services-work">
         <div class="service-item">
           <div class="icon">
             <i class="fa fa-home" aria-hidden="true"></i>
@@ -406,9 +387,9 @@ construction company
     </div>
   </div>
   <!-- Portfolio -->
-  <div class="Container site-profile">
+  <div class="container-fluid section-profile">
     <div class="row">
-      <div class="col md-8 site-heading">
+      <div class="col-md-8 section-heading">
         <h4>___OUR PROFILE</h4>
         <h2>
           RECENT WORK INTRO
@@ -441,31 +422,31 @@ construction company
       </div>
     </div>
     <div class="row">   
-      <div class="col-md-4 profile-img">
+      <div class="col-md-4 col-xs-6 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-1.jpg" alt="">
       </div>
-      <div class="col-md-4 profile-img">
+      <div class="col-md-4 col-xs-6 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/2.jpg" alt="">
       </div>
-      <div class="col-md-4 profile-img">
+      <div class="col-md-4 col-xs-6 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-3.jpg">
       </div>
-      <div class="col-md-4 profile-img">
+      <div class="col-md-4 col-xs-6 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/5.jpg" alt="">
       </div>
-      <div class="col-md-4 profile-img">
+      <div class="col-md-4 col-xs-6 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-5.jpg" alt="">
       </div>
-      <div class="col-md-4 profile-img">
+      <div class="col-md-4 col-xs-6 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-6.jpg" alt="">
       </div>
 
     </div>
   </div>
   <!-- Team -->
-  <div class="Container site">
+  <div class="container-fluid section-team">
     <div class="row">
-      <div class="col md-8 site-heading">
+      <div class="col-md-8 section-heading">
         <h4>___TEAM MEMBER</h4>
         <h2>
           MEET OUR EXPERT
@@ -478,8 +459,8 @@ construction company
         </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-3 team">
+    <div class="row ml-2">
+      <div class="col-md-4 team">
         <div class="card" style="width: 21rem; height: 650px;">
           <img class="card-img-top" src="http://thememine.net/themeforest/vinno/assets/img/team/con-1.jpg" alt="Card image cap">
           <div class="team-name text-white text-center">
@@ -496,7 +477,7 @@ construction company
           </div>
         </div>
       </div>
-        <div class="col-md-3 team">
+        <div class="col-md-4 team">
           <div class="card" style="width: 21rem; height: 650px;">
             <img class="card-img-top" src="    http://thememine.net/themeforest/vinno/assets/img/team/con-2.jpg" alt="Card image cap">
             <div class="team-name text-white text-center">
@@ -514,7 +495,7 @@ construction company
           </div>
         </div>
   
-        <div class="col-md-3 team">
+        <div class="col-md-4 team">
           <div class="card" style="width: 21rem; height: 650px;">
             <img class="card-img-top" src="   http://thememine.net/themeforest/vinno/assets/img/team/con-3.jpg" alt="Card image cap">
             <div class="team-name text-white text-center">
@@ -535,18 +516,17 @@ construction company
       </div>
   </div>
   <!-- Seperator -->
-  <div class="Container">
+  <div class="container-fluid">
     <div class="row seperator">
-    <div class="col-md-2 seperator-text text-white">
+    <div class="col-md-3 seperator-text text-white">
         <h2>
           2330
-
         </h2>
         <span>
           POSITIVE RATING
                    </span>
     </div>
-    <div class="col-md-2 seperator-text text-white">
+    <div class="col-md-3 seperator-text text-white">
       <h2>
         1234
 
@@ -555,7 +535,7 @@ construction company
         SATISFIED CLIENTS
                 </span>
     </div>
-    <div class="col-md-2 seperator-text text-white">
+    <div class="col-md-3 seperator-text text-white">
       <h2>
         500
 
@@ -564,7 +544,7 @@ construction company
         PROJECTS
                 </span>
     </div>
-    <div class="col-md-2 seperator-text text-white">
+    <div class="col-md-3 seperator-text text-white">
       <h2>
         2348
 
@@ -577,9 +557,9 @@ construction company
     </div>
   </div>
   <!-- News Blogs -->
-  <div class="Container site-blog">
-    <div class="row">
-      <div class="col md-8 site-heading">
+  <div class="container-fluid section-blog">
+    <div class="row ">
+      <div class="col-md-8 section-heading">
         <h4>___TEAM MEMBER</h4>
         <h2>
           MEET OUR EXPERT
@@ -592,14 +572,14 @@ construction company
         </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-3 team mt-5">
+    <div class="row ml-1">
+      <div class="col-md-4 mt-5">
         <div class="card" style="width: 21rem; height: 250px;">
           <img class="card-img-top" style="height: 250px;"src="http://thememine.net/themeforest/vinno/assets/img/blog/4.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title" style="font-weight: 800;">Now Eldest New Tastes Plenty Mother Called Misery Get</h5>
             <div class="row">
-              <div class="col blog-icons">
+              <div class="col blog-icons ">
                 <i class="fa fa-calendar" aria-hidden="true">
                 </i>
                 12 Aug,2018
@@ -609,7 +589,7 @@ construction company
                 <i class="fa fa-user" aria-hidden="true"></i>
                 AUTHOR
               </div>
-              <div class="blog-icons">
+              <div class="col blog-icons">
                 <i class="fa fa-comments-o" aria-hidden="true"></i>
                 12 Aug,2018
               </div>
@@ -618,7 +598,7 @@ construction company
           </div>
         </div>
       </div>
-        <div class="col-md-3 team mt-5">
+        <div class="col-md-4 mt-5">
           <div class="card" style="width: 21rem; height: 250px;">
             <img class="card-img-top" style="height: 250px;" src="http://thememine.net/themeforest/vinno/assets/img/blog/5.jpg" alt="Card image cap">
             <div class="card-body">
@@ -635,9 +615,9 @@ construction company
                 <i class="fa fa-user" aria-hidden="true"></i>
                 AUTHOR
               </div>
-              <div class="blog-icons">
+              <div class="col blog-icons">
                 <i class="fa fa-comments-o" aria-hidden="true"></i>
-                COMMENTS
+                12 Aug,2018
               </div>
             </div>
               <p class="card-text">Cultivated possession far comparison projection considered. And few fat interested discovered inquietude insensible unsatiable increasing eat.</p>
@@ -645,7 +625,7 @@ construction company
           </div>
         </div>
   
-        <div class="col-md-3 team mt-5">
+        <div class="col-md-4 mt-5">
           <div class="card" style="width: 21rem; height: 250px;">
             <img class="card-img-top" style="height: 250px;" src="http://thememine.net/themeforest/vinno/assets/img/blog/6.jpg" alt="Card image cap">
             <div class="card-body">
@@ -661,9 +641,9 @@ construction company
                 <i class="fa fa-user" aria-hidden="true"></i>
                 AUTHOR
               </div>
-              <div class="blog-icons">
+              <div class="col blog-icons">
                 <i class="fa fa-comments-o" aria-hidden="true"></i>
-                COMMENTS
+                12 Aug,2018
               </div>
             </div>
               <p class="card-text">Cultivated possession far comparison projection considered. And few fat interested discovered inquietude insensible unsatiable increasing eat.</p>
