--- a/index.html
+++ b/index.html
@@ -201,46 +201,50 @@ construction company
      Less he year do with no sure loud
   </p>
   <div class="feature-list">
-    <div class="item">
-      <i class="fa fa-home" aria-hidden="true"></i>
+    <div class="row">
+      <div class="col-md-2 item">
+        <i class="fa fa-home" aria-hidden="true"></i>
+      </div>
+      <div class="col-md-12 feature-info">
+        <h4>
+          Home and Renovations
+        </h4>
+        <p>
+          Towards journey chapter females offered not. 
+          Led distrusts otherwise who may newspaper but. 
+          Last he dull am none he mile hold as.
+        </p>
+      </div>
     </div>
-    <div class="feature-info">
-      <h4>
-        Home and Renovations
-      </h4>
-      <p>
-        Towards journey chapter females offered not. 
-        Led distrusts otherwise who may newspaper but. 
-        Last he dull am none he mile hold as.
-      </p>
+    <div class="row button-info">
+      <div class="col-md-2 item">
+        <i class="fa fa-window-maximize" aria-hidden="true"></i>
+      </div>
+      <div class="col-md-12 feature-info">
+        <h4>
+          Floors & Roofs Repairing
+        </h4>
+        <p>
+          Towards journey chapter females offered not. 
+          Led distrusts otherwise who may newspaper but. 
+          Last he dull am none he mile hold as.
+        </p>
+      </div>
     </div>
-    
-    <div class="item button-info">
-      <i class="fa fa-address-card" aria-hidden="true"></i>
-    </div>
-    <div class="feature-info">
-      <h4>
-        Floors & Roofs Repairing
-      </h4>
-      <p>
-        Towards journey chapter females offered not. 
-        Led distrusts otherwise who may newspaper but. 
-        Last he dull am none he mile hold as.
-      </p>
-    </div>
-    
-    <div class="item button-info">
-      <i class="fa fa-archive" aria-hidden="true"></i>
-    </div>
-    <div class="feature-info">
-      <h4>
-        Architecture & Interior
-      </h4>
-      <p>
-        Towards journey chapter females offered not. 
-        Led distrusts otherwise who may newspaper but. 
-        Last he dull am none he mile hold as.
-      </p>
+    <div class="row button-info">
+      <div class="col-md-2 item">
+        <i class="fa fa-archive" aria-hidden="true"></i>
+      </div>
+      <div class="col-md-12 feature-info">
+        <h4>
+          Architecture & INTERIOR
+        </h4>
+        <p>
+          Towards journey chapter females offered not. 
+          Led distrusts otherwise who may newspaper but. 
+          Last he dull am none he mile hold as.
+        </p>
+      </div>
     </div>
   </div>
 </div>
@@ -263,125 +267,143 @@ construction company
         </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-3 col-xs-6 services-work">
-        <div class="service-item">
-          <div class="icon">
+    <div class="row text-center">
+      <div class="col-md-3 services-work">
+        <div class="row">
+          <div class="col-lg-2 service-item">
             <i class="fa fa-home" aria-hidden="true"></i>
           </div>
-          <div class="serivce-info">
+          <div class="col-lg-10 serivce-info">
             <h3>Construction</h3>
-         <p>
-          Hastened property exercise of. 
-          Dissim comparison terminated devonshire
-           no literature on. Say most yet head room such
-         </p> 
-         <a href="#" class="service-more">
-           READ MORE
-           <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-         </a>
+            <p>
+              Hastened property exercise of. 
+              Dissim comparison terminated devonshire
+               no literature on. Say most yet head room such
+             </p> 
+             <div class="row">
+               <div class="col-md-2 count">1</div>
+               <div class="col-md-8">
+                 <a href="#" class="service-more">
+                   Read MORE
+                 </a>
+               </div>
+             </div>
           </div>
-          <div class="count">1</div>
         </div>
       </div>
-      <div class="col-md-3 col-xs-6 services-work">
-        <div class="service-item">
-          <div class="icon">
-            <i class="fa fa-fire" aria-hidden="true"></i>
+      <div class=" col-md-3 services-work">
+        <div class="row">
+          <div class="col-lg-2 service-item">
+            <i class="fa fa-fire " aria-hidden="true"></i>
           </div>
-          <div class="serivce-info">
+          <div class="col-lg-10 serivce-info">
             <h3>Architecture</h3>
-         <p>
-          Hastened property exercise of. 
-          Dissim comparison terminated devonshire
-           no literature on. Say most yet head room such
-         </p> 
-         <a href="#" class="service-more">
-           READ MORE
-           <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-         </a>
+            <p>
+              Hastened property exercise of. 
+              Dissim comparison terminated devonshire
+               no literature on. Say most yet head room such
+             </p> 
+             <div class="row">
+               <div class="col-md-2 count">2</div>
+               <div class="col-md-8">
+                 <a href="#" class="service-more">
+                   Read MORE
+                 </a>
+               </div>
+             </div>
           </div>
-          <div class="count">2</div>
         </div>
       </div>
-      <div class="col-md-3 col-xs-6 services-work">
-        <div class="service-item">
-          <div class="icon">
+      <div class="col-md-3 services-work">
+        <div class="row">
+          <div class="col-lg-2 service-item">
             <i class="fa fa-id-badge" aria-hidden="true"></i>
           </div>
-          <div class="serivce-info">
+          <div class="col-lg-10 serivce-info">
             <h3>House Renovations</h3>
-         <p>
-          Hastened property exercise of. 
-          Dissim comparison terminated devonshire
-           no literature on. Say most yet head room such
-         </p> 
-         <a href="#" class="service-more">
-           READ MORE
-           <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-         </a>
+            <p>
+              Hastened property exercise of. 
+              Dissim comparison terminated devonshire
+               no literature on. Say most yet head room such
+             </p> 
+             <div class="row">
+               <div class="col-md-2 count">3</div>
+               <div class="col-md-8">
+                 <a href="#" class="service-more">
+                   Read MORE
+                 </a>
+               </div>
+             </div>
           </div>
-          <div class="count">3</div>
         </div>
       </div>
-      <div class="col-md-3 col-xs-6 services-work">
-        <div class="service-item">
-          <div class="icon">
+      <div class="col-md-3 services-work">
+        <div class="row">
+          <div class="col-lg-2 service-item">
             <i class="fa fa-building" aria-hidden="true"></i>
           </div>
-          <div class="serivce-info">
-            <h3>Building</h3>
-         <p>
-          Hastened property exercise of. 
-          Dissim comparison terminated devonshire
-           no literature on. Say most yet head room such
-         </p> 
-         <a href="#" class="service-more">
-           READ MORE
-           <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-         </a>
+          <div class="col-lg-10 serivce-info">
+            <h3>BUILDING</h3>
+            <p>
+              Hastened property exercise of. 
+              Dissim comparison terminated devonshire
+               no literature on. Say most yet head room such
+             </p> 
+             <div class="row">
+               <div class="col-md-2 count">4</div>
+               <div class="col-md-8">
+                 <a href="#" class="service-more">
+                   Read MORE
+                 </a>
+               </div>
+             </div>
           </div>
-          <div class="count">4</div>
         </div>
       </div>
-      <div class="col-md-3 col-xs-6 services-work">
-        <div class="service-item">
-          <div class="icon">
+      <div class="col-md-3 services-work">
+        <div class="row">
+          <div class="col-lg-2 service-item">
             <i class="fa fa-paint-brush" aria-hidden="true"></i>
           </div>
-          <div class="serivce-info">
+          <div class="col-lg-10 serivce-info">
             <h3>Tiling And Paintingn</h3>
-         <p>
-          Hastened property exercise of. 
-          Dissim comparison terminated devonshire
-           no literature on. Say most yet head room such
-         </p> 
-         <a href="#" class="service-more">
-           READ MORE
-           <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-         </a>
+            <p>
+              Hastened property exercise of. 
+              Dissim comparison terminated devonshire
+               no literature on. Say most yet head room such
+             </p> 
+             <div class="row">
+               <div class="col-md-2 count">5</div>
+               <div class="col-md-8">
+                 <a href="#" class="service-more">
+                   Read MORE
+                 </a>
+               </div>
+             </div>
           </div>
-          <div class="count">5</div>
         </div>
       </div>
-      <div class="col-md-3 col-xs-6 services-work">
-        <div class="service-item">
-          <div class="icon">
+      <div class="col-md-3 services-work">
+        <div class="row">
+          <div class="col-lg-2 service-item">
             <i class="fa fa-home" aria-hidden="true"></i>
           </div>
-          <div class="serivce-info">
-            <h3>House Extensions</h3>
-         <p>
-          Hastened property exercise of. 
-          Dissim comparison terminated devonshire
-           no literature on. Say most yet head room such
-         </p> 
-         <a href="#" class="service-more">
-           READ MORE
-           <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-         </a>
+          <div class="col-lg-10 serivce-info">
+            <h3>HOUSE EXTENSIONS</h3>
+            <p>
+              Hastened property exercise of. 
+              Dissim comparison terminated devonshire
+               no literature on. Say most yet head room such
+             </p> 
+             <div class="row">
+               <div class="col-md-2 count">6</div>
+               <div class="col-md-8">
+                 <a href="#" class="service-more">
+                   Read MORE
+                 </a>
+               </div>
+             </div>
           </div>
-          <div class="count">6</div>
         </div>
       </div>
     </div>
@@ -422,22 +444,22 @@ construction company
       </div>
     </div>
     <div class="row">   
-      <div class="col-md-4 col-xs-6 profile-img">
+      <div class="col-md-4 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-1.jpg" alt="">
       </div>
-      <div class="col-md-4 col-xs-6 profile-img">
+      <div class="col-md-4 profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/2.jpg" alt="">
       </div>
-      <div class="col-md-4 col-xs-6 profile-img">
+      <div class="col-md-4  profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-3.jpg">
       </div>
-      <div class="col-md-4 col-xs-6 profile-img">
+      <div class="col-md-4  profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/5.jpg" alt="">
       </div>
-      <div class="col-md-4 col-xs-6 profile-img">
+      <div class="col-md-4  profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-5.jpg" alt="">
       </div>
-      <div class="col-md-4 col-xs-6 profile-img">
+      <div class="col-md-4  profile-img">
         <img src="http://thememine.net/themeforest/vinno/assets/img/portfolio/con-6.jpg" alt="">
       </div>
 
