--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@ construction company
   </p>
   <div class="feature-list">
     <div class="row">
-      <div class="col-md-2 item">
+      <div class="col-lg-2 item">
         <i class="fa fa-home" aria-hidden="true"></i>
       </div>
-      <div class="col-md-12 feature-info">
+      <div class="col-lg-10 feature-info">
         <h4>
           Home and Renovations
         </h4>
@@ -217,10 +217,10 @@ construction company
       </div>
     </div>
     <div class="row button-info">
-      <div class="col-md-2 item">
+      <div class="col-lg-2 item">
         <i class="fa fa-window-maximize" aria-hidden="true"></i>
       </div>
-      <div class="col-md-12 feature-info">
+      <div class="col-lg-10 feature-info">
         <h4>
           Floors & Roofs Repairing
         </h4>
@@ -232,10 +232,10 @@ construction company
       </div>
     </div>
     <div class="row button-info">
-      <div class="col-md-2 item">
+      <div class="col-lg-2 item">
         <i class="fa fa-archive" aria-hidden="true"></i>
       </div>
-      <div class="col-md-12 feature-info">
+      <div class="col-lg-10 feature-info">
         <h4>
           Architecture & INTERIOR
         </h4>
