--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -50,22 +49,22 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/cons3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption bg-dark d-md-block d-flex justify-content-start align-items-start flex-column py-5">
+                <img src="images/slider-a.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption bg-dark">
                   <h5>First slide label</h5>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cons2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption bg-dark d-md-block d-flex justify-content-start align-items-start flex-column py-5">
+                <img src="images/slider-2.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption bg-dark">
                   <h5>Second slide label</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cons3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption bg-dark d-md-block d-flex justify-content-start align-items-start flex-column py-5">
+                <img src="images/slider-3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption bg-dark">
                   <h5>Third slide label</h5>
                   <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                 </div>
@@ -82,19 +81,19 @@
           </div>
       </header>
       <!-- Second-section -->
-      <section class="main_heading my-5 bg-info">
-          <div class="text-center py-5">
-              <h1 class="display-4">About Us</h1>
+      <section class="about_section my-5">
+          <div class="text-center my-5">
+              <h3 class="display-4">About Us</h3>
               <hr class="w-25 mx-auto"/>
           </div>
           <div class="container">
               <div class="row">
-                  <div class="col-lg-6 col-md-6 col-12 col-xxl-6">
+                  <div class="col-md-6 col-12">
                       <figure>
-                          <img src="images/cons3.jpg" alt="about img" class="img-fluid about_img">
+                          <img src="images/service-1.jpg" alt="about img" class="img-fluid about_img">
                       </figure>
                   </div>
-                  <div class="col-lg-6 col-md-6 col-12 col-xxl-6 d-flex justify-content-center align-items-start flex-column">
+                  <div class="col-md-6 col-12 d-flex justify-content-center align-items-start flex-column">
                     <h1>MY Journey</h1>
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
@@ -105,19 +104,19 @@
               </div>
           </div>
       </section>
-          <section  class="main_heading my-5 bg-light">
+          <section class="service_section my-5 bg-light">
             <!-- Third-section -->
-            <div class="text-center py-5">
-              <h1 class="display-4">Service</h1>
+            <div class="text-center my-5">
+              <h3 class="display-4">Service</h3>
               <hr class="w-25 mx-auto"/>
           </div>
             <div class="container services">
               <div class="row">
-                <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                  <div class="card mb-3" style="max-width: 540px;">
+                <div class="col-md-4 col-12">
+                  <div class="card mb-3">
                     <div class="row">
                       <div class="col-md-4">
-                        <img src="images/cons2.jpg" class="img-fluid" alt="...">
+                        <img src="images/service-1.jpg" class="img-fluid">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -129,11 +128,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                  <div class="card mb-3" style="max-width: 540px;">
+                <div class="col-md-4 col-12">
+                  <div class="card mb-3">
                     <div class="row">
                       <div class="col-md-4">
-                        <img src="images/cons2.jpg" class="img-fluid" alt="...">
+                        <img src="images/service-2a.jpg" class="img-fluid">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -145,11 +144,11 @@
                     </div>
                   </div>
                 </div> 
-                <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                  <div class="card mb-3" style="max-width: 540px;">
+                <div class="col-md-4 col-12">
+                  <div class="card mb-3">
                     <div class="row">
                       <div class="col-md-4">
-                        <img src="images/cons2.jpg" class="img-fluid" alt="...">
+                        <img src="images/slider-3.jpg" class="img-fluid">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -165,46 +164,113 @@
             </div>
           </section>
           <!-- Fourth section -->
-          <section class="main_heading my-5">
-            <div class="text-center py-5">
-              <h1 class="display-4">Profile</h1>
+          <section class="profile_section my-5">
+            <div class="text-center my-5">
+              <h3 class="display-4">Profile</h3>
+              <hr class="w-25 mx-auto"/>
+          </div>
+          <div class="container">
+            <div class="row mb-5">
+              <div class="col-md-4 col-12">
+                  <img src="images/profile-3.jpg" class="img-fluid mb-3">
+              </div>
+              <div class="col-md-4 col-12">
+                  <img src="images/profile-6.jpg" class="img-fluid mb-3">
+              </div>
+              <div class="col-md-4 col-12">
+                  <img src="images/profile-3.jpg" class="img-fluid mb-3">
+              </div>
+              <div class="col-md-4 col-12">
+                  <img src="images/profile-4.jpg" class="img-fluid mb-3">
+              </div>
+              <div class="col-md-4 col-12">
+                  <img src="images/profile-3.jpg" class="img-fluid mb-3">
+              </div>
+              <div class="col-md-4 col-12">
+                  <img src="images/profile-6.jpg" class="img-fluid mb-3">
+              </div>
+            </div>
+          </div>
+          </section>
+          <!-- section 6 -->
+          <section class="section_seperator my-5 py-2 seperator">
+            <div class="container-fluid">
+              <div class="row text-center text-white">
+                  <div class="col-12 col-xxl-12">
+                    <h3>Check Out My Videos</h3>
+                    <p>
+                      I've battled demons that won't let me sleep
+                      Called to the sea but she abandoned me
+                    </p>
+                    <button type="button" class="btn btn-info"data-toggle="tooltip" data-placement="right" title="Check About It">Check More</button>
+                  </div>
+              </div>
+            </div>
+          </section>
+          <section class="section_form my-5">
+            <div class="text-center my-5">
+              <h3 class="display-4">Submit Form</h3>
               <hr class="w-25 mx-auto"/>
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                <figure>
-                  <img src="images/cons1.jpg" class="img-fluid">
-                </figure>
-              </div>
-              <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                <figure>
-                  <img src="images/cons1.jpg" class="img-fluid">
-                </figure>
-              </div>
-              <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                <figure>
-                  <img src="images/cons1.jpg" class="img-fluid">
-                </figure>
-              </div>
-              <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                <figure>
-                  <img src="images/cons1.jpg" class="img-fluid">
-                </figure>
-              </div>
-              <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                <figure>
-                  <img src="images/cons1.jpg" class="img-fluid">
-                </figure>
-              </div>
-              <div class="col-md-4 col-12 col-xxl-4 mx-auto">
-                <figure>
-                  <img src="images/cons1.jpg" class="img-fluid">
-                </figure>
+              <div class="col-md-10 col-12 d-flex justify-content-center align-items-center flex-column">
+                <form>
+                  <div class="form-group">
+                    <label for="inputFirstName">First Name</label>
+                    <input type="text" class="form-control" placeholder="Enter Your First name">
+                  </div>
+                  <div class="form-group">
+                    <label for="inputLastName">Last Name</label>
+                    <input type="text" class="form-control" placeholder="Enter Your Last name">
+                  </div>
+
+                    <div class="form-group">
+                      <label for="inputEmail4">Email</label>
+                      <input type="email" class="form-control" placeholder="Enter Your Email" id="inputPassword4">
+                    </div>
+                    <div class="form-group">
+                      <label for="inputPassword4">Password</label>
+                      <input type="password" class="form-control" placeholder="Enter Your Password" id="inputPassword4">
+                    </div>
+                  <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                  </div>
+                  <div class="form-group">
+                    <label for="inputAddress2">Address 2</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputCity">City</label>
+                      <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputState">State</label>
+                      <select id="inputState" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-2">
+                      <label for="inputZip">Zip</label>
+                      <input type="text" class="form-control" id="inputZip">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="gridCheck">
+                      <label class="form-check-label" for="gridCheck">
+                        Check me out
+                      </label>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
               </div>
             </div>
           </div>
-
           </section>
     <!-- Script -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
