--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- first-section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">NAVBAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -244,18 +244,23 @@
                   <div class="form-row">
                     <div class="form-group col-md-6">
                       <label for="inputCity">City</label>
-                      <input type="text" class="form-control" id="inputCity">
+                      <input type="text" class="form-control" placeholder="Ahemdabad" id="inputCity">
                     </div>
                     <div class="form-group col-md-4">
                       <label for="inputState">State</label>
                       <select id="inputState" class="form-control">
-                        <option selected>Choose...</option>
+                        <option selected>Delhi</option>
+                        <option selected>Amritsar</option>
+                        <option selected>Luckhnow</option>
+                        <option selected>Mumbai</option>
+                        <option selected>Jammu</option>
+
                         <option>...</option>
                       </select>
                     </div>
                     <div class="form-group col-md-2">
                       <label for="inputZip">Zip</label>
-                      <input type="text" class="form-control" id="inputZip">
+                      <input type="text" class="form-control"placeholder="1440.." id="inputZip">
                     </div>
                   </div>
                   <div class="form-group">
