--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-6 col-12">
-                      <figure>
                           <img src="images/service-1.jpg" alt="about img" class="img-fluid about_img">
-                      </figure>
                   </div>
                   <div class="col-md-6 col-12 d-flex justify-content-center align-items-start flex-column">
                     <h1>MY Journey</h1>
@@ -104,8 +102,8 @@
               </div>
           </div>
       </section>
-          <section class="service_section my-5 bg-light">
             <!-- Third-section -->
+          <section class="service_section my-5 bg-light">
             <div class="text-center my-5">
               <h3 class="display-4">Service</h3>
               <hr class="w-25 mx-auto"/>
@@ -193,7 +191,7 @@
           </div>
           </section>
           <!-- section 6 -->
-          <section class="section_seperator my-5 py-2 seperator">
+          <section class="seperator_section my-5 py-2 seperator">
             <div class="container-fluid">
               <div class="row text-center text-white">
                   <div class="col-12 col-xxl-12">
@@ -207,7 +205,8 @@
               </div>
             </div>
           </section>
-          <section class="section_form my-5">
+          <!-- section 7 -->
+          <section class="form_section my-5">
             <div class="text-center my-5">
               <h3 class="display-4">Submit Form</h3>
               <hr class="w-25 mx-auto"/>
