--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/slider-a.jpg" class="d-block w-100" alt="...">
+                <img src="images/slider-a.jpg" class="d-block w-100">
                 <div class="carousel-caption bg-dark">
                   <h5>First slide label</h5>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/slider-2.jpeg" class="d-block w-100" alt="...">
+                <img src="images/slider-2.jpeg" class="d-block w-100">
                 <div class="carousel-caption bg-dark">
                   <h5>Second slide label</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/slider-3.jpg" class="d-block w-100" alt="...">
+                <img src="images/slider-3.jpg" class="d-block w-100">
                 <div class="carousel-caption bg-dark">
                   <h5>Third slide label</h5>
                   <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
