--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <section class="seperator_section my-5 py-2 seperator">
             <div class="container-fluid">
               <div class="row text-center text-white">
-                  <div class="col-12 col-xxl-12">
+                  <div class="col-12">
                     <h3>Check Out My Videos</h3>
                     <p>
                       I've battled demons that won't let me sleep
